--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "kchoi85",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
